--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:3.5.1' // 버전 수정
+        classpath 'com.google.gms:google-services:4.3.2' // 추가
     }
 }
 
