--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   animated_text_kit: ^2.0.0
   firebase_core: ^0.4.3+3
   firebase_auth: ^0.15.4
+  cloud_firestore: ^0.13.1+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
